--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Trabajando con Vue</title>
+    <title>Trabajando con Vue JS</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 </head>
@@ -26,10 +26,6 @@
         <div class="progress mt-3">
             <div class="progress-bar bg-success" :class="changeColor" role="progressbar" :style="{'width': counter+'%'}" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">{{ counter }}</div>
         </div>
-
-
-
-
 
         <hr>
 
